--- a/.github/workflows/main_spotify-liked-songs-playlist.yml
+++ b/.github/workflows/main_spotify-liked-songs-playlist.yml
@@ -4,6 +4,10 @@
 
 name: Build and deploy Python app to Azure Web App - spotify-liked-songs-playlist
 
+env:
+  AZURE_WEBAPP_NAME: spotify-liked-songs-playlist
+  PYTHON_VERSION: '3.9'
+
 on:
   push:
     branches:
@@ -30,7 +34,16 @@ jobs:
       - name: Install dependencies
         run: pip install -r requirements.txt
 
+      - name: Set up dependency caching for faster installs
+        uses: actions/cache@v3
+        with:
+          path: ~/.cache/pip
+          key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}
+          restore-keys: |
+            ${{ runner.os }}-pip-
+
       # Optional: Add step to run tests here (PyTest, Django test suites, etc.)
+      
       - name: Zip artifact for deployment
         run: zip release.zip ./* -r
 
